public class Board {
    
static String[][] totito = {{"   ", "|", "   ", "|", "   "},                                      // el totito visual
{"---", "-", "---", "-", "---"}, 
{"   ", "|", "   ", "|", "   "}, 
{"---", "-", "---", "-", "---"},
{"   ", "|", "   ", "|", "   "},  };

}
